# ai_founder_os

./: .gitignore  AGENT_START_PROMPT.md  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  pyproject.toml  railway.json  requirements.txt  roadmap.md  tasks.json
.github/workflows/: ci.yml  lint.yml  test.yml
docs/: ARCHITECTURE.md  CONNECTION_MANAGER.md  PRD.md  WORKER_SYSTEM.md  deployment.md
docs/api/: README.md
examples/: command_example.py  planner_example.py  policy_example.py
frontend/: .npmrc  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
memory/: 2026-03-06.md
prompts/: builder_prompt.md  planner_prompt.md  skill_review_prompt.md  system_prompt.md  verifier_prompt.md
schemas/: evidence_pack.schema.json  experience.schema.json  idea.schema.json  project.schema.json  review_card.schema.json  skill.schema.json  task.schema.json
souls/: builder.json  documenter.json  evaluator.json  planner.json  researcher.json  verifier.json
src/: api_keys.py  memory.py  storage.py
src/api/: server.py
src/connections/: __init__.py  manager.py  providers.py
src/dashboard/: api.py
src/experience/: ledger.py
src/planner/: commands.py  planner.py
src/policy/: engine.py  human_gate.py
src/skills/: __init__.py  loader.py
src/workers/: registry.py
tests/: test_commands.py  test_connections.py  test_dashboard.py  test_experience.py  test_human_gate.py  test_planner.py  test_policy.py  test_skills.py  test_workers.py
tests/integration/: test_api_server.py  test_planner_workers.py  (+1 more)
(+9 files in other folders)
